# naive_bayes_classifier_c_plusplus

./: .gitignore  CMakeLists.txt  README.md
src/: classifier_evaluator.cpp  classifier_evaluator.h  global_variables.h  image_data.cpp  image_data.h  main.cpp  training_data.cpp  training_data.h
src/classifier_evaluator/: classifier_evaluator.cpp  classifier_evaluator.h
src/classifier_improver/: classifier_improver.cpp  classifier_improver.h
src/image_data/: image_data.cpp  image_data.h
src/images_and_labels_dataset/: images_and_labels_dataset.cpp  images_and_labels_dataset.h
src/naive_bayes_classifier/: naive_bayes_classifier.cpp  naive_bayes_classifier.h
src/naive_bayes_classifying_model/: naive_bayes_classifying_model.cpp  naive_bayes_classifying_model.h
src/training_data/: training_data.h
src/utils/: utils.cpp  utils.h
tests/: catch.hpp  test_classifier_evaluator.cpp  test_image_data.cpp  test_images_and_labels_dataset.cpp  test_naive_bayes_classifier.cpp  test_naive_bayes_classifying_model.cpp
